--- a/notebooks/simple_linear_regression.ipynb
+++ b/notebooks/simple_linear_regression.ipynb
@@ -123,7 +123,7 @@
    ],
    "source": [
     "# ----------------------------\n",
-    "# Main Pipeline\n",
+    "# Visualization\n",
     "# ----------------------------\n",
     "\n",
     "# scatter plot of TV advertising spend vs sales\n",
